Simple Commit with Small improves (#9)